<resources>
    <string name="app_name">JumpCutter</string>
    <string name="uploadvideobutton">upload a video</string>
    <string name="uploadyoutubeurl">Continue</string>
    <string name="select_video_from_device">Select Video from Device</string>
    <string name="hint_paste_youtube_url_here">Paste youtube url here...</string>
    <string name="or_use_a_youtube_url">Or use a YouTube URL</string>
    <string name="about_jumpcutter">About JumpCutter</string>
    <string name="about_version">Version: 1.0.0.0</string>
    <string name="about_dev1">Dev 1: Palkoska Marco</string>
    <string name="about_dev2">Dev 2: Luthiger Yannick</string>
    <string name="copyright_notice">© 2019 Palkoska Marco, Luthiger Yannick All Rights Reserved</string>
    <string name="label_upload_progress">Upload</string>
    <string name="label_processing">Processing Video</string>
    <string name="label_processing_progress">Processing</string>
    <string name="label_download_progress">Download</string>
    <string name="show_processed_videos">Show processed videos</string>
    <string name="start_conversion">Start Conversion</string>
</resources>
