<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/aboutappname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:text="@string/about_jumpcutter"
        android:textAlignment="center"
        android:textSize="20pt"
        android:textStyle="bold"
        android:padding="10pt"
        />

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:text="@string/about_version"
        android:padding="5pt"
        android:textSize="14pt"
        />

    <TextView
        android:id="@+id/dev1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:text="@string/about_dev1"
        android:padding="5pt"
        android:textSize="14pt"
        />

    <TextView
        android:id="@+id/dev2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:text="@string/about_dev2"
        android:textSize="14pt"
        android:padding="5pt"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/copyright_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:text="@string/copyright_notice"
        android:textSize="8pt"
        android:padding="5pt"
        />
</LinearLayout>