<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textViewProcessingTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/label_processing"
            android:textAlignment="center"
            android:textSize="20pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/label_upload_progress"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/progressBar_upload"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewProcessing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/label_processing_progress"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/progressBar_processing"
            style="@android:style/Widget.DeviceDefault.ProgressBar.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textViewDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/label_download_progress"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/progressBar_download"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/show_processed_videos"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="10dp" />
</android.support.constraint.ConstraintLayout>